Finished HTML structure

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<div class="nav-mob"></div>
 	</nav>
 	<main class="main">
-		<section class="cover">
+		<section id="cover">
 			<div class="tnw">TNW</div>
 			<div class="section-date">Thursday-March 7,2019</div>
 			<div class="section-content">
@@ -44,7 +44,331 @@
 				<p class="content-caption"></p>
 			</div>
 		</section>
-		<div class="wrapper"></div>
+		<div class="wrapper">
+			<section id="latest-news">
+				<h2 class="latest-head"></h2>
+				<article class="latest-article">
+					<div class="art-img"></div>
+					<h2></h2>
+					<h3></h3>
+				</article>
+				<article class="latest-article">
+					<div class="art-img"></div>
+					<h2></h2>
+					<h3></h3>
+				</article>
+				<article class="latest-article">
+					<div class="art-img"></div>
+					<h2></h2>
+					<h3></h3>
+				</article>
+				<article class="latest-article">
+					<div class="art-img"></div>
+					<h2></h2>
+					<h3></h3>
+				</article>
+				<article class="latest-article">
+					<div class="art-img"></div>
+					<h2></h2>
+					<h3></h3>
+				</article>
+				<article class="latest-article">
+					<div class="art-img"></div>
+					<h2></h2>
+					<h3></h3>
+				</article>
+				<article class="latest-article">
+					<div class="art-img"></div>
+					<h2></h2>
+					<h3></h3>
+				</article>
+				<article class="latest-article">
+					<div class="art-img"></div>
+					<h2></h2>
+					<h3></h3>
+				</article>
+			</section>
+			<section id="latest-funding">
+				<div>
+					<h2 class="latest-head"></h2>
+				</div>
+				<div class="deals-more"> 
+					<a href="#"></a>
+					<a href="#"></a>
+					<a href="#"></a>
+				</div>
+				<article class="fund">
+					<div class="fund-img"></div>
+					<div class="ft1"></div>
+					<div class="ft2"></div>
+					<div class="ft-mid"></div>
+					<div class="ft-bottom"></div>
+				</article>
+				<article class="fund">
+					<div class="fund-img"></div>
+					<div class="ft1"></div>
+					<div class="ft2"></div>
+					<div class="ft-mid"></div>
+					<div class="ft-bottom"></div>
+				</article>
+				<article class="fund">
+					<div class="fund-img"></div>
+					<div class="ft1"></div>
+					<div class="ft2"></div>
+					<div class="ft-mid"></div>
+					<div class="ft-bottom"></div>
+				</article>
+				<article class="fund">
+					<div class="fund-img"></div>
+					<div class="ft1"></div>
+					<div class="ft2"></div>
+					<div class="ft-mid"></div>
+					<div class="ft-bottom"></div>
+				</article>
+			</section>
+			<section id="popular-section">
+				<article class="popular-box">
+					<h1 class="box-head"></h1>
+					<div class="pop-img1">
+						<h2 class="pop-img1-text"></h2>
+					</div>
+					<div class="pop-img2">
+						<h2 class="pop-title1"></h2>
+						<div class="pop-img2-square"></div>
+					</div>
+					<div class="pop-list">
+						<ul>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+					</div>
+				</article>
+				<article class="popular-box">
+					<h1 class="box-head"></h1>
+					<div class="pop-img1">
+						<h2 class="pop-img1-text"></h2>
+					</div>
+					<div class="pop-img2">
+						<h2 class="pop-title1"></h2>
+						<div class="pop-img2-square"></div>
+					</div>
+					<div class="pop-list">
+						<ul>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+					</div>
+				</article>
+				<article class="popular-box">
+					<h1 class="box-head"></h1>
+					<div class="pop-img1">
+						<h2 class="pop-img1-text"></h2>
+					</div>
+					<div class="pop-img2">
+						<h2 class="pop-title1"></h2>
+						<div class="pop-img2-square"></div>
+					</div>
+					<div class="pop-list">
+						<ul>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+					</div>
+				</article>
+				<article class="popular-box">
+					<h1 class="box-head"></h1>
+					<div class="pop-img1">
+						<h2 class="pop-img1-text"></h2>
+					</div>
+					<div class="pop-img2">
+						<h2 class="pop-title1"></h2>
+						<div class="pop-img2-square"></div>
+					</div>
+					<div class="pop-list">
+						<ul>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+					</div>
+				</article>
+				<article class="popular-box">
+					<h1 class="box-head"></h1>
+					<div class="pop-img1">
+						<h2 class="pop-img1-text"></h2>
+					</div>
+					<div class="pop-img2">
+						<h2 class="pop-title1"></h2>
+						<div class="pop-img2-square"></div>
+					</div>
+					<div class="pop-list">
+						<ul>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+					</div>
+				</article>
+				<article class="popular-box">
+					<h1 class="box-head"></h1>
+					<div class="pop-img1">
+						<h2 class="pop-img1-text"></h2>
+					</div>
+					<div class="pop-img2">
+						<h2 class="pop-title1"></h2>
+						<div class="pop-img2-square"></div>
+					</div>
+					<div class="pop-list">
+						<ul>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+					</div>
+				</article>
+				<article class="popular-box">
+					<h1 class="box-head"></h1>
+					<div class="pop-img1">
+						<h2 class="pop-img1-text"></h2>
+					</div>
+					<div class="pop-img2">
+						<h2 class="pop-title1"></h2>
+						<div class="pop-img2-square"></div>
+					</div>
+					<div class="pop-list">
+						<ul>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+					</div>
+				</article>
+				<article class="popular-box">
+					<h1 class="box-head"></h1>
+					<div class="pop-img1">
+						<h2 class="pop-img1-text"></h2>
+					</div>
+					<div class="pop-img2">
+						<h2 class="pop-title1"></h2>
+						<div class="pop-img2-square"></div>
+					</div>
+					<div class="pop-list">
+						<ul>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+					</div>
+				</article>
+				<article class="popular-box">
+					<h1 class="box-head"></h1>
+					<div class="pop-img1">
+						<h2 class="pop-img1-text"></h2>
+					</div>
+					<div class="pop-img2">
+						<h2 class="pop-title1"></h2>
+						<div class="pop-img2-square"></div>
+					</div>
+					<div class="pop-list">
+						<ul>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+							<li></li>
+						</ul>
+					</div>
+				</article>
+			</section>
+			<section id="latest-deals">
+				<div>
+					<h2 class="latest-head"></h2>
+				</div>
+				<article class="deal">
+					<div id="deal-1"></div>
+					<h2></h2>
+					<div class="prices">
+						<h2 class="last-price"></h2>
+						<h3 class="offer"></h3>
+					</div>
+				</article>
+				<article class="deal">
+					<div id="deal-2"></div>
+					<h2></h2>
+					<div class="prices">
+						<h2 class="last-price"></h2>
+						<h3 class="offer"></h3>
+					</div>
+				</article>
+				<article class="deal">
+					<div id="deal-3"></div>
+					<h2></h2>
+					<div class="prices">
+						<h2 class="last-price"></h2>
+						<h3 class="offer"></h3>
+					</div>
+				</article>
+				<article class="deal">
+					<div id="deal-4"></div>
+					<h2></h2>
+					<div class="prices">
+						<h2 class="last-price"></h2>
+						<h3 class="offer"></h3>
+					</div>
+				</article>
+				<article class="deal">
+					<div id="deal-5"></div>
+					<h2></h2>
+					<div class="prices">
+						<h2 class="last-price"></h2>
+						<h3 class="offer"></h3>
+					</div>
+				</article>
+				<article class="deal">
+					<div id="deal-6"></div>
+					<h2></h2>
+					<div class="prices">
+						<h2 class="last-price"></h2>
+						<h3 class="offer"></h3>
+					</div>
+				</article>
+				<article class="deal">
+					<div id="deal-7"></div>
+					<h2></h2>
+					<div class="prices">
+						<h2 class="last-price"></h2>
+						<h3 class="offer"></h3>
+					</div>
+				</article>
+				<article class="">
+					<div id="deal-8"></div>
+					<h2></h2>
+					<div class="prices">
+						<h2 class="last-price"></h2>
+						<h3 class="offer"></h3>
+					</div>
+				</article>
+			</section>
+		</div>
 	</main>
 	<footer class="footer">
 		<div class="footer-links"></div>
