Added style to the nav and section

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 <body>
 	<nav class="nav">
 		<div class="nav-logo"></div>
-		<ul>
+		<ul class="nav-topbar flex-display">
 			<li>News</li>
 			<li>Events</li>
 			<li>Business</li>
 			<li>AMAs</li>
 			<li>Spaces</li>
 		</ul>
-		<div class="nav-tnw">
-			<ul>
+		<div class="nav-secbar flex-display">
+			<ul class="flex-display">
 				<li class="nav-sections-section">Latest</li>
 				<li class="nav-sections-section">Hand Fork</li>
 				<li class="nav-sections-section">Plugged</li>
@@ -29,14 +29,17 @@
 				<li class="nav-sections-section">IOT lAB</li>
 				<li class="nav-sections-section">Investing 2.0</li>
 			</ul>
-			<div class="nav-countdown"></div>
+			<div class="search-bar">
+				
+			</div>
 		</div>
-		<div class="u-clear"></div>
-		<div class="nav-mob"></div>
+		<div class="nav-mob">
+			Get more than 75% off your tickets to TNW2019! Find out how
+		</div>
 	</nav>
 	<main class="main">
 		<section id="cover">
-			<div class="tnw">TNW</div>
+			<div class="tnw"></div>
 			<div class="section-date">Thursday-March 7,2019</div>
 			<div class="section-content">
 				<p class="content-head">INSIGHTS</p>
