Added latest funding and latest article sections

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 	<title>The Next Web</title>
@@ -48,85 +49,129 @@
 			</div>
 		</section>
 		<div class="wrapper">
-			<section id="latest-news">
-				<h2 class="latest-head"></h2>
+			<section id="latest-news" class="flex-display">
+				<h2 class="latest-head">Latest News ▸</h2>
 				<article class="latest-article">
-					<div class="art-img"></div>
-					<h2></h2>
-					<h3></h3>
+					<div id="art-img1"></div>
+					<h2>do eiusmod tempor incididunt</h2>
+					<h3>Sit nostrud occaecat - 12 hrs ago</h3>
 				</article>
 				<article class="latest-article">
-					<div class="art-img"></div>
-					<h2></h2>
-					<h3></h3>
+					<div id="art-img2"></div>
+					<h2>quis nostrud exercitation ullamco laboris nisi</h2>
+					<h3>Sit nostrud occaecat - 12 hrs ago</h3>
 				</article>
 				<article class="latest-article">
-					<div class="art-img"></div>
-					<h2></h2>
-					<h3></h3>
+					<div id="art-img3"></div>
+					<h2>do eiusmod tempor incididunt</h2>
+					<h3>Sit nostrud occaecat - 12 hrs ago</h3>
 				</article>
 				<article class="latest-article">
-					<div class="art-img"></div>
-					<h2></h2>
-					<h3></h3>
+					<div id="art-img4"></div>
+					<h2>quis nostrud exercitation ullamco laboris nisi</h2>
+					<h3>Sit nostrud occaecat - 12 hrs ago</h3>
 				</article>
 				<article class="latest-article">
-					<div class="art-img"></div>
-					<h2></h2>
-					<h3></h3>
+					<div id="art-img5"></div>
+					<h2>do eiusmod tempor incididunt</h2>
+					<h3>Sit nostrud occaecat - 12 hrs ago</h3>
 				</article>
 				<article class="latest-article">
-					<div class="art-img"></div>
-					<h2></h2>
-					<h3></h3>
+					<div id="art-img6"></div>
+					<h2>quis nostrud exercitation ullamco laboris nisi</h2>
+					<h3>Sit nostrud occaecat - 12 hrs ago</h3>
 				</article>
 				<article class="latest-article">
-					<div class="art-img"></div>
-					<h2></h2>
-					<h3></h3>
+					<div id="art-img7"></div>
+					<h2>do eiusmod tempor incididunt</h2>
+					<h3>Sit nostrud occaecat - 12 hrs ago</h3>
 				</article>
 				<article class="latest-article">
-					<div class="art-img"></div>
-					<h2></h2>
-					<h3></h3>
+					<div id="art-img8"></div>
+					<h2>quis nostrud exercitation ullamco laboris nisi</h2>
+					<h3>Sit nostrud occaecat - 12 hrs ago</h3>
 				</article>
 			</section>
-			<section id="latest-funding">
-				<div>
-					<h2 class="latest-head"></h2>
+			<section id="latest-funding" class="flex-display">
+				<div class="funding-head">
+					<h2> ad minim veniam ▸</h2>
 				</div>
 				<div class="deals-more"> 
-					<a href="#"></a>
-					<a href="#"></a>
-					<a href="#"></a>
+					<a href="#">add</a>
+					<a href="#" class="mid-deal">minim</a>
+					<a href="#">veniam</a>
 				</div>
 				<article class="fund">
-					<div class="fund-img"></div>
-					<div class="ft1"></div>
-					<div class="ft2"></div>
-					<div class="ft-mid"></div>
-					<div class="ft-bottom"></div>
+					<div class="fund-img" id="fund-1"></div>
+					<div class="funding-text ft1">$3 veniam</div>
+					<div class="funding-text ft2">$11M</div>
+					<div class="ft-mid flex-display column">
+						<h4 class="ft-mid-top">
+								<i class="fas fa-tag"></i>
+								exercitation ullamco
+							</h4>
+							<h4 class="ft-mid-bottom">
+								<i class="fas fa-briefcase"></i>
+								Non do laboris
+							</h4>
+					</div>
+					<div class="ft-bottom">
+						<h4 class="ft-end">Laboris et proident nisi aute</h4>
+					</div>
+				</article>
+				<article class="fund" >
+					<div class="fund-img" id="fund-2"></div>
+					<div class="funding-text ft1">$3 veniam</div>
+					<div class="funding-text ft2">$11M</div>
+					<div class="ft-mid flex-display column">
+						<h4 class="ft-mid-top">
+							<i class="fas fa-tag"></i>
+							exercitation ullamco
+						</h4>
+						<h4 class="ft-mid-bottom">
+							<i class="fas fa-briefcase"></i>
+							Non do laboris
+						</h4>
+					</div>
+					<div class="ft-bottom">
+						<h4 class="ft-end">Laboris et proident nisi aute</h4>
+					</div>
+				</article>
+				<article class="fund" >
+					<div class="fund-img" id="fund-3"></div>
+					<div class="funding-text ft1">$3 veniam</div>
+					<div class="funding-text ft2">$11M</div>
+					<div class="ft-mid flex-display column">
+						<h4 class="ft-mid-top">
+							<i class="fas fa-tag"></i>
+							exercitation ullamco
+						</h4>
+						<h4 class="ft-mid-bottom">
+							<i class="fas fa-briefcase"></i>
+							Non do laboris
+						</h4>
+					</div>
+					<div class="ft-bottom">
+						<h4 class="ft-end">Laboris et proident nisi aute</h4>
+					</div>
 				</article>
 				<article class="fund">
-					<div class="fund-img"></div>
-					<div class="ft1"></div>
-					<div class="ft2"></div>
-					<div class="ft-mid"></div>
-					<div class="ft-bottom"></div>
-				</article>
-				<article class="fund">
-					<div class="fund-img"></div>
-					<div class="ft1"></div>
-					<div class="ft2"></div>
-					<div class="ft-mid"></div>
-					<div class="ft-bottom"></div>
-				</article>
-				<article class="fund">
-					<div class="fund-img"></div>
-					<div class="ft1"></div>
-					<div class="ft2"></div>
-					<div class="ft-mid"></div>
-					<div class="ft-bottom"></div>
+					<div class="fund-img" id="fund-4"></div>
+					<div class="funding-text ft1">$3 veniam</div>
+					<div class="funding-text ft2">$11M</div>
+					<div class="ft-mid flex-display column">
+						<h4 class="ft-mid-top">
+							<i class="fas fa-tag"></i>
+							exercitation ullamco
+						</h4>
+						<h4 class="ft-mid-bottom">
+							<i class="fas fa-briefcase"></i>
+							Non do laboris
+						</h4>
+					</div>
+					<div class="ft-bottom">
+						<h4 class="ft-end">Laboris et proident nisi aute</h4>
+					</div>
 				</article>
 			</section>
 			<section id="popular-section">
