Added gradient and background image the section

--- a/index.html
+++ b/index.html
@@ -40,12 +40,16 @@
 	</nav>
 	<main class="main">
 		<section id="cover">
-			<div class="tnw"></div>
-			<div class="section-date">Thursday-March 7,2019</div>
-			<div class="section-content">
-				<p class="content-head">INSIGHTS</p>
-				<P class="content-body"></P>
-				<p class="content-caption"></p>
+			<div id="cover-gradient1">
+				<div id="cover-gradient2">
+					<div class="tnw"></div>
+					<div class="section-date">Thursday-March 7,2019</div>
+					<div class="section-content">
+						<p class="content-head">INSIGHTS</p>
+						<P class="content-body"></P>
+						<p class="content-caption"></p>
+					</div>
+				</div>
 			</div>
 		</section>
 		<div class="wrapper">
