Added styled section content

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 					<div class="section-date">Thursday-March 7,2019</div>
 					<div class="section-content">
 						<p class="content-head">INSIGHTS</p>
-						<P class="content-body"></P>
-						<p class="content-caption"></p>
+						<P class="content-body">The next chapter for TNW: Financial Times acquires a majority stake in TNW</P>
+						<p class="content-caption">by Patrick de Laive 2 days ago 93</p>
 					</div>
 				</div>
 			</div>
