styled nav bars

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 			<li>AMAs</li>
 			<li>Spaces</li>
 		</ul>
-		<div class="nav-secbar flex-display">
-			<ul class="flex-display">
+		<div class="nav-secbar">
+			<ul class="nav-bar flex-display">
 				<li class="nav-sections-section">Latest</li>
 				<li class="nav-sections-section">Hand Fork</li>
 				<li class="nav-sections-section">Plugged</li>
