Added popular section and images

--- a/index.html
+++ b/index.html
@@ -178,175 +178,175 @@
 					</div>
 				</article>
 			</section>
-			<section id="popular-section">
+			<section id="popular-section" class="flex-display">
 				<article class="popular-box">
-					<h1 class="box-head"></h1>
-					<div class="pop-img1">
-						<h2 class="pop-img1-text"></h2>
+					<h1 class="box-head">Laboris et ▸</h1>
+					<div class="pop-img1 flex-display" id="p-img1">
+						<h2 class="pop-img1-text"> dolor in reprehenderit in voluptate</h2>
 					</div>
-					<div class="pop-img2">
-						<h2 class="pop-title1"></h2>
-						<div class="pop-img2-square"></div>
+					<div class="pop-img2 flex-display column">
+						<h2 class="pop-title1">Qui ullamco sit siteract ex</h2>
+						<div class="pop-img2-square" id="sq1"></div>
 					</div>
 					<div class="pop-list">
 						<ul>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
+							<li>Lorem ipsum dolor sit amet,</li>
+							<li>consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</li>
+							<li>ut labore et dolore magna aliqua. Cras pulvinar mattis nunc sed blandit libero volutpat sed</li>
+							<li>Orci dapibus ultrices in iaculis nunc sed augue lacus.</li>
+							<li>Lacus laoreet non curabitur gravida arcu ac tortor dignissim.</li>
+						</ul>
+					</div>
+				</article>
+				<article class="popular-box ">
+					<h1 class="box-head">Laboris et ▸</h1>
+					<div class="pop-img1 flex-display" id="p-img2">
+						<h2 class="pop-img1-text"> dolor in reprehenderit in voluptate</h2>
+					</div>
+					<div class="pop-img2 flex-display column">
+						<h2 class="pop-title1">Qui ullamco sit siteract ex</h2>
+						<div class="pop-img2-square" id="sq2"></div>
+					</div>
+					<div class="pop-list">
+						<ul>
+							<li>Lorem ipsum dolor sit amet,</li>
+							<li>consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</li>
+							<li>ut labore et dolore magna aliqua. Cras pulvinar mattis nunc sed blandit libero volutpat sed</li>
+							<li>Orci dapibus ultrices in iaculis nunc sed augue lacus.</li>
+							<li>Lacus laoreet non curabitur gravida arcu ac tortor dignissim.</li>
+						</ul>
+					</div>
+				</article>
+				<article class="popular-box ">
+					<h1 class="box-head">Laboris et ▸</h1>
+					<div class="pop-img1 flex-display" id="p-img3">
+						<h2 class="pop-img1-text"> dolor in reprehenderit in voluptate</h2>
+					</div>
+					<div class="pop-img2 flex-display column">
+						<h2 class="pop-title1">Qui ullamco sit siteract ex</h2>
+						<div class="pop-img2-square" id="sq3"></div>
+					</div>
+					<div class="pop-list">
+						<ul>
+							<li>Lorem ipsum dolor sit amet,</li>
+							<li>consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</li>
+							<li>ut labore et dolore magna aliqua. Cras pulvinar mattis nunc sed blandit libero volutpat sed</li>
+							<li>Orci dapibus ultrices in iaculis nunc sed augue lacus.</li>
+							<li>Lacus laoreet non curabitur gravida arcu ac tortor dignissim.</li>
+						</ul>
+					</div>
+				</article>
+				<article class="popular-box ">
+					<h1 class="box-head">Laboris et ▸</h1>
+					<div class="pop-img1 flex-display" id="p-img4">
+						<h2 class="pop-img1-text"> dolor in reprehenderit in voluptate</h2>
+					</div>
+					<div class="pop-img2 flex-display column">
+						<h2 class="pop-title1">Qui ullamco sit siteract ex</h2>
+						<div class="pop-img2-square" id="sq4"></div>
+					</div>
+					<div class="pop-list">
+						<ul>
+							<li>Lorem ipsum dolor sit amet,</li>
+							<li>consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</li>
+							<li>ut labore et dolore magna aliqua. Cras pulvinar mattis nunc sed blandit libero volutpat sed</li>
+							<li>Orci dapibus ultrices in iaculis nunc sed augue lacus.</li>
+							<li>Lacus laoreet non curabitur gravida arcu ac tortor dignissim.</li>
+						</ul>
+					</div>
+				</article>
+				<article class="popular-box ">
+					<h1 class="box-head">Laboris et ▸</h1>
+					<div class="pop-img1 flex-display" id="p-img5">
+						<h2 class="pop-img1-text">dolor in reprehenderit in voluptate</h2>
+					</div>
+					<div class="pop-img2 flex-display column">
+						<h2 class="pop-title1">Qui ullamco sit siteract ex</h2>
+						<div class="pop-img2-square" id="sq5"></div>
+					</div>
+					<div class="pop-list">
+						<ul>
+							<li>Lorem ipsum dolor sit amet,</li>
+							<li>consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</li>
+							<li>ut labore et dolore magna aliqua. Cras pulvinar mattis nunc sed blandit libero volutpat sed</li>
+							<li>Orci dapibus ultrices in iaculis nunc sed augue lacus.</li>
+							<li>Lacus laoreet non curabitur gravida arcu ac tortor dignissim.</li>
+						</ul>
+					</div>
+				</article>
+				<article class="popular-box ">
+					<h1 class="box-head">Laboris et ▸</h1>
+					<div class="pop-img1 flex-display" id="p-img6">
+						<h2 class="pop-img1-text">dolor in reprehenderit in voluptate</h2>
+					</div>
+					<div class="pop-img2 flex-display column">
+						<h2 class="pop-title1">Qui ullamco sit siteract ex</h2>
+						<div class="pop-img2-square" id="sq6"></div>
+					</div>
+					<div class="pop-list">
+						<ul>
+							<li>Lorem ipsum dolor sit amet,</li>
+							<li>consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</li>
+							<li>ut labore et dolore magna aliqua. Cras pulvinar mattis nunc sed blandit libero volutpat sed</li>
+							<li>Orci dapibus ultrices in iaculis nunc sed augue lacus.</li>
+							<li>Lacus laoreet non curabitur gravida arcu ac tortor dignissim.</li>
+						</ul>
+					</div>
+				</article>
+				<article class="popular-box ">
+					<h1 class="box-head">Laboris et ▸</h1>
+					<div class="pop-img1 flex-display" id="p-img7">
+						<h2 class="pop-img1-text">dolor in reprehenderit in voluptate</h2>
+					</div>
+					<div class="pop-img2 flex-display column">
+						<h2 class="pop-title1">Qui ullamco sit siteract ex</h2>
+						<div class="pop-img2-square" id="sq7"></div>
+					</div>
+					<div class="pop-list">
+						<ul>
+							<li>Lorem ipsum dolor sit amet,</li>
+							<li>consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</li>
+							<li>ut labore et dolore magna aliqua. Cras pulvinar mattis nunc sed blandit libero volutpat sed</li>
+							<li>Orci dapibus ultrices in iaculis nunc sed augue lacus.</li>
+							<li>Lacus laoreet non curabitur gravida arcu ac tortor dignissim.</li>
+						</ul>
+					</div>
+				</article>
+				<article class="popular-box ">
+					<h1 class="box-head">Laboris et ▸</h1>
+					<div class="pop-img1 flex-display" id="p-img8">
+						<h2 class="pop-img1-text">dolor in reprehenderit in voluptate</h2>
+					</div>
+					<div class="pop-img2 flex-display column">
+						<h2 class="pop-title1">Qui ullamco sit siteract ex</h2>
+						<div class="pop-img2-square" id="sq8"></div>
+					</div>
+					<div class="pop-list">
+						<ul>
+							<li>Lorem ipsum dolor sit amet,</li>
+							<li>consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</li>
+							<li>ut labore et dolore magna aliqua. Cras pulvinar mattis nunc sed blandit libero volutpat sed</li>
+							<li>Orci dapibus ultrices in iaculis nunc sed augue lacus.</li>
+							<li>Lacus laoreet non curabitur gravida arcu ac tortor dignissim.</li>
 						</ul>
 					</div>
 				</article>
 				<article class="popular-box">
-					<h1 class="box-head"></h1>
-					<div class="pop-img1">
-						<h2 class="pop-img1-text"></h2>
+					<h1 class="box-head">Laboris et ▸</h1>
+					<div class="pop-img1 flex-display" id="p-img9">
+						<h2 class="pop-img1-text">dolor in reprehenderit in voluptate</h2>
 					</div>
-					<div class="pop-img2">
-						<h2 class="pop-title1"></h2>
-						<div class="pop-img2-square"></div>
-					</div>
-					<div class="pop-list">
-						<ul>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-						</ul>
-					</div>
-				</article>
-				<article class="popular-box">
-					<h1 class="box-head"></h1>
-					<div class="pop-img1">
-						<h2 class="pop-img1-text"></h2>
-					</div>
-					<div class="pop-img2">
-						<h2 class="pop-title1"></h2>
-						<div class="pop-img2-square"></div>
+					<div class="pop-img2 flex-display column">
+						<h2 class="pop-title1">Qui ullamco sit siteract ex</h2>
+						<div class="pop-img2-square" id="sq9"></div>
 					</div>
 					<div class="pop-list">
 						<ul>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-						</ul>
-					</div>
-				</article>
-				<article class="popular-box">
-					<h1 class="box-head"></h1>
-					<div class="pop-img1">
-						<h2 class="pop-img1-text"></h2>
-					</div>
-					<div class="pop-img2">
-						<h2 class="pop-title1"></h2>
-						<div class="pop-img2-square"></div>
-					</div>
-					<div class="pop-list">
-						<ul>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-						</ul>
-					</div>
-				</article>
-				<article class="popular-box">
-					<h1 class="box-head"></h1>
-					<div class="pop-img1">
-						<h2 class="pop-img1-text"></h2>
-					</div>
-					<div class="pop-img2">
-						<h2 class="pop-title1"></h2>
-						<div class="pop-img2-square"></div>
-					</div>
-					<div class="pop-list">
-						<ul>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-						</ul>
-					</div>
-				</article>
-				<article class="popular-box">
-					<h1 class="box-head"></h1>
-					<div class="pop-img1">
-						<h2 class="pop-img1-text"></h2>
-					</div>
-					<div class="pop-img2">
-						<h2 class="pop-title1"></h2>
-						<div class="pop-img2-square"></div>
-					</div>
-					<div class="pop-list">
-						<ul>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-						</ul>
-					</div>
-				</article>
-				<article class="popular-box">
-					<h1 class="box-head"></h1>
-					<div class="pop-img1">
-						<h2 class="pop-img1-text"></h2>
-					</div>
-					<div class="pop-img2">
-						<h2 class="pop-title1"></h2>
-						<div class="pop-img2-square"></div>
-					</div>
-					<div class="pop-list">
-						<ul>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-						</ul>
-					</div>
-				</article>
-				<article class="popular-box">
-					<h1 class="box-head"></h1>
-					<div class="pop-img1">
-						<h2 class="pop-img1-text"></h2>
-					</div>
-					<div class="pop-img2">
-						<h2 class="pop-title1"></h2>
-						<div class="pop-img2-square"></div>
-					</div>
-					<div class="pop-list">
-						<ul>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-						</ul>
-					</div>
-				</article>
-				<article class="popular-box">
-					<h1 class="box-head"></h1>
-					<div class="pop-img1">
-						<h2 class="pop-img1-text"></h2>
-					</div>
-					<div class="pop-img2">
-						<h2 class="pop-title1"></h2>
-						<div class="pop-img2-square"></div>
-					</div>
-					<div class="pop-list">
-						<ul>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
-							<li></li>
+							<li>Lorem ipsum dolor sit amet,</li>
+							<li>consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</li>
+							<li>ut labore et dolore magna aliqua. Cras pulvinar mattis nunc sed blandit libero volutpat sed</li>
+							<li>Orci dapibus ultrices in iaculis nunc sed augue lacus.</li>
+							<li>Lacus laoreet non curabitur gravida arcu ac tortor dignissim.</li>
 						</ul>
 					</div>
 				</article>
