Added and styled latest deals

--- a/index.html
+++ b/index.html
@@ -420,6 +420,49 @@
 					</div>
 				</article>
 			</section>
+			<section id="latest-news" class="flex-display">
+				<h2 class="latest-head">Latest deals ▸</h2>
+				<article class="latest-article">
+					<div id="offer-img1" class="offer-size"></div>
+					<h2>do eiusmod tempor incididunt</h2>
+					<strike class = "strike">$909.97</strike></span><span class="offer">$29.99</span>
+				</article>
+				<article class="latest-article">
+					<div id="offer-img2" class="offer-size"></div>
+					<h2>quis nostrud exercitation ullamco</h2>
+					<strike class = "strike">$909.97</strike></span><span class="offer">$29.99</span>
+				</article>
+				<article class="latest-article">
+					<div id="offer-img3" class="offer-size"></div>
+					<h2>do eiusmod tempor incididunt</h2>
+					<strike class = "strike">$909.97</strike></span><span class="offer">$29.99</span>
+				</article>
+				<article class="latest-article">
+					<div id="offer-img4" class="offer-size"></div>
+					<h2>quis nostrud exercitation ullamco</h2>
+					<strike class = "strike">$909.97</strike></span><span class="offer">$29.99</span>
+				</article>
+				<article class="latest-article">
+					<div id="offer-img5" class="offer-size"></div>
+					<h2>do eiusmod tempor incididunt</h2>
+					<strike class = "strike">$909.97</strike></span><span class="offer">$29.99</span>
+				</article>
+				<article class="latest-article">
+					<div id="offer-img6" class="offer-size"></div>
+					<h2>quis nostrud exercitation ullamco</h2>
+					<strike class = "strike">$909.97</strike></span><span class="offer">$29.99</span>
+				</article>
+				<article class="latest-article">
+					<div id="offer-img7" class="offer-size"></div>
+					<h2>do eiusmod tempor incididunt</h2>
+					<strike class = "strike">$909.97</strike></span><span class="offer">$29.99</span>
+				</article>
+				<article class="latest-article">
+					<div id="offer-img8" class="offer-size"></div>
+					<h2>quis nostrud exercitation ullamco</h2>
+					<strike class = "strike">$909.97</strike></span><span class="offer">$29.99</span>
+				</article>
+			</section>
 		</div>
 	</main>
 	<footer class="footer">
