Added responsive css file

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/responsive-styles.css">
 	<title>The Next Web</title>
 </head>
 <body>
@@ -20,7 +21,7 @@
 			<li>AMAs</li>
 			<li>Spaces</li>
 		</ul>
-		<div class="nav-secbar">
+		<div class="nav-secbar flex-display">
 			<ul class="nav-bar flex-display">
 				<li class="nav-sections-section">Latest</li>
 				<li class="nav-sections-section">Hand Fork</li>
@@ -30,9 +31,8 @@
 				<li class="nav-sections-section">IOT lAB</li>
 				<li class="nav-sections-section">Investing 2.0</li>
 			</ul>
-			<div class="search-bar">
-				
-			</div>
+			<div id="search-bar"><i class="fas fa-search"></i></div>
+			<div id="bar"><i class="fas fa-bars"></i></div>
 		</div>
 		<div class="nav-mob">
 			Get more than 75% off your tickets to TNW2019! Find out how
