Added responsive styles for sections

--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
 					<h2>quis nostrud exercitation ullamco laboris nisi</h2>
 					<h3>Sit nostrud occaecat - 12 hrs ago</h3>
 				</article>
+				<article class="latest-article hidden">
+					<div id="art-img8"></div>
+					<h2>quis nostrud exercitation ullamco laboris nisi</h2>
+					<h3>Sit nostrud occaecat - 12 hrs ago</h3>
+				</article>
 			</section>
 			<section id="latest-funding" class="flex-display">
 				<div class="funding-head">
@@ -159,7 +164,7 @@
 						<h4 class="ft-end">Laboris et proident nisi aute</h4>
 					</div>
 				</article>
-				<article class="fund">
+				<article class="fund no-display">
 					<div class="fund-img" id="fund-4"></div>
 					<div class="funding-text ft1">$3 veniam</div>
 					<div class="funding-text ft2">$11M</div>
@@ -425,42 +430,71 @@
 				<article class="latest-article">
 					<div id="offer-img1" class="offer-size"></div>
 					<h2>do eiusmod tempor incididunt</h2>
-					<strike class = "strike">$909.97</strike></span><span class="offer">$29.99</span>
+					<div class="deal">
+						<strike class = "strike">$909.97</strike>
+						<span class="offer">$29.99</span>
+					</div>
 				</article>
 				<article class="latest-article">
 					<div id="offer-img2" class="offer-size"></div>
 					<h2>quis nostrud exercitation ullamco</h2>
-					<strike class = "strike">$909.97</strike></span><span class="offer">$29.99</span>
+					<div class="deal">
+						<strike class = "strike">$909.97</strike>
+						<span class="offer">$29.99</span>
+					</div>
 				</article>
 				<article class="latest-article">
 					<div id="offer-img3" class="offer-size"></div>
 					<h2>do eiusmod tempor incididunt</h2>
-					<strike class = "strike">$909.97</strike></span><span class="offer">$29.99</span>
+					<div class="deal">
+						<strike class = "strike">$909.97</strike>
+						<span class="offer">$29.99</span>
+					</div>
 				</article>
 				<article class="latest-article">
 					<div id="offer-img4" class="offer-size"></div>
 					<h2>quis nostrud exercitation ullamco</h2>
-					<strike class = "strike">$909.97</strike></span><span class="offer">$29.99</span>
+					<div class="deal">
+						<strike class = "strike">$909.97</strike>
+						<span class="offer">$29.99</span>
+					</div>
 				</article>
 				<article class="latest-article">
 					<div id="offer-img5" class="offer-size"></div>
 					<h2>do eiusmod tempor incididunt</h2>
-					<strike class = "strike">$909.97</strike></span><span class="offer">$29.99</span>
+					<div class="deal">
+						<strike class = "strike">$909.97</strike>
+						<span class="offer">$29.99</span>
+					</div>
 				</article>
 				<article class="latest-article">
 					<div id="offer-img6" class="offer-size"></div>
 					<h2>quis nostrud exercitation ullamco</h2>
-					<strike class = "strike">$909.97</strike></span><span class="offer">$29.99</span>
+					<div class="deal">
+						<strike class = "strike">$909.97</strike>
+						<span class="offer">$29.99</span>
+					</div>
 				</article>
 				<article class="latest-article">
 					<div id="offer-img7" class="offer-size"></div>
 					<h2>do eiusmod tempor incididunt</h2>
-					<strike class = "strike">$909.97</strike></span><span class="offer">$29.99</span>
+					<div class="deal">
+						<strike class = "strike">$909.97</strike>
+						<span class="offer">$29.99</span>
+					</div>
 				</article>
 				<article class="latest-article">
 					<div id="offer-img8" class="offer-size"></div>
 					<h2>quis nostrud exercitation ullamco</h2>
-					<strike class = "strike">$909.97</strike></span><span class="offer">$29.99</span>
+					<div class="deal">
+						<strike class = "strike">$909.97</strike>
+						<span class="offer">$29.99</span>
+					</div>
+				</article>
+				<article class="latest-article hidden">
+					<div id="offer-img8"></div>
+					<h2>quis nostrud exercitation ullamco laboris nisi</h2>
+					<h3>Sit nostrud occaecat - 12 hrs ago</h3>
 				</article>
 			</section>
 		</div>
