Added responsive styles to nav and top section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 	<nav class="nav">
-		<div class="nav-logo"></div>
+		<div id="nav-logo"><img src="assets/images/tnw.svg" alt="logo"></div>
 		<ul class="nav-topbar flex-display">
 			<li>News</li>
 			<li>Events</li>
@@ -41,7 +41,7 @@
 	<main class="main">
 		<section id="cover">
 			<div id="cover-gradient1">
-				<div id="cover-gradient2">
+				<div id="cover-gradient2" class="flex-display column">
 					<div class="tnw"></div>
 					<div class="section-date">Thursday-March 7,2019</div>
 					<div class="section-content">
