--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html>
-<html lang="en">
+<html lang="zxx">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -40,6 +39,7 @@
 	</nav>
 	<main class="main">
 		<section id="cover">
+			<h2 class="hidden-head">cover</h2>
 			<div id="cover-gradient1">
 				<div id="cover-gradient2" class="flex-display column">
 					<div class="tnw"></div>
@@ -96,7 +96,7 @@
 					<h3>Sit nostrud occaecat - 12 hrs ago</h3>
 				</article>
 				<article class="latest-article hidden">
-					<div id="art-img8"></div>
+					<div id="art-img9"></div>
 					<h2>quis nostrud exercitation ullamco laboris nisi</h2>
 					<h3>Sit nostrud occaecat - 12 hrs ago</h3>
 				</article>
@@ -184,8 +184,9 @@
 				</article>
 			</section>
 			<section id="popular-section" class="flex-display">
+				<h2 class="hidden-head">popular section</h2>
 				<article class="popular-box">
-					<h1 class="box-head">Laboris et ▸</h1>
+					<h2 class="box-head">Laboris et ▸</h2>
 					<div class="pop-img1 flex-display" id="p-img1">
 						<h2 class="pop-img1-text"> dolor in reprehenderit in voluptate</h2>
 					</div>
@@ -204,7 +205,7 @@
 					</div>
 				</article>
 				<article class="popular-box ">
-					<h1 class="box-head">Laboris et ▸</h1>
+					<h2 class="box-head">Laboris et ▸</h2>
 					<div class="pop-img1 flex-display" id="p-img2">
 						<h2 class="pop-img1-text"> dolor in reprehenderit in voluptate</h2>
 					</div>
@@ -223,7 +224,7 @@
 					</div>
 				</article>
 				<article class="popular-box ">
-					<h1 class="box-head">Laboris et ▸</h1>
+					<h2 class="box-head">Laboris et ▸</h2>
 					<div class="pop-img1 flex-display" id="p-img3">
 						<h2 class="pop-img1-text"> dolor in reprehenderit in voluptate</h2>
 					</div>
@@ -242,7 +243,7 @@
 					</div>
 				</article>
 				<article class="popular-box ">
-					<h1 class="box-head">Laboris et ▸</h1>
+					<h2 class="box-head">Laboris et ▸</h2>
 					<div class="pop-img1 flex-display" id="p-img4">
 						<h2 class="pop-img1-text"> dolor in reprehenderit in voluptate</h2>
 					</div>
@@ -261,7 +262,7 @@
 					</div>
 				</article>
 				<article class="popular-box ">
-					<h1 class="box-head">Laboris et ▸</h1>
+					<h2 class="box-head">Laboris et ▸</h2>
 					<div class="pop-img1 flex-display" id="p-img5">
 						<h2 class="pop-img1-text">dolor in reprehenderit in voluptate</h2>
 					</div>
@@ -280,7 +281,7 @@
 					</div>
 				</article>
 				<article class="popular-box ">
-					<h1 class="box-head">Laboris et ▸</h1>
+					<h2 class="box-head">Laboris et ▸</h2>
 					<div class="pop-img1 flex-display" id="p-img6">
 						<h2 class="pop-img1-text">dolor in reprehenderit in voluptate</h2>
 					</div>
@@ -299,7 +300,7 @@
 					</div>
 				</article>
 				<article class="popular-box ">
-					<h1 class="box-head">Laboris et ▸</h1>
+					<h2 class="box-head">Laboris et ▸</h2>
 					<div class="pop-img1 flex-display" id="p-img7">
 						<h2 class="pop-img1-text">dolor in reprehenderit in voluptate</h2>
 					</div>
@@ -318,7 +319,7 @@
 					</div>
 				</article>
 				<article class="popular-box ">
-					<h1 class="box-head">Laboris et ▸</h1>
+					<h2 class="box-head">Laboris et ▸</h2>
 					<div class="pop-img1 flex-display" id="p-img8">
 						<h2 class="pop-img1-text">dolor in reprehenderit in voluptate</h2>
 					</div>
@@ -337,7 +338,7 @@
 					</div>
 				</article>
 				<article class="popular-box">
-					<h1 class="box-head">Laboris et ▸</h1>
+					<h2 class="box-head">Laboris et ▸</h2>
 					<div class="pop-img1 flex-display" id="p-img9">
 						<h2 class="pop-img1-text">dolor in reprehenderit in voluptate</h2>
 					</div>
@@ -356,82 +357,13 @@
 					</div>
 				</article>
 			</section>
-			<section id="latest-deals">
-				<div>
-					<h2 class="latest-head"></h2>
-				</div>
-				<article class="deal">
-					<div id="deal-1"></div>
-					<h2></h2>
-					<div class="prices">
-						<h2 class="last-price"></h2>
-						<h3 class="offer"></h3>
-					</div>
-				</article>
-				<article class="deal">
-					<div id="deal-2"></div>
-					<h2></h2>
-					<div class="prices">
-						<h2 class="last-price"></h2>
-						<h3 class="offer"></h3>
-					</div>
-				</article>
-				<article class="deal">
-					<div id="deal-3"></div>
-					<h2></h2>
-					<div class="prices">
-						<h2 class="last-price"></h2>
-						<h3 class="offer"></h3>
-					</div>
-				</article>
-				<article class="deal">
-					<div id="deal-4"></div>
-					<h2></h2>
-					<div class="prices">
-						<h2 class="last-price"></h2>
-						<h3 class="offer"></h3>
-					</div>
-				</article>
-				<article class="deal">
-					<div id="deal-5"></div>
-					<h2></h2>
-					<div class="prices">
-						<h2 class="last-price"></h2>
-						<h3 class="offer"></h3>
-					</div>
-				</article>
-				<article class="deal">
-					<div id="deal-6"></div>
-					<h2></h2>
-					<div class="prices">
-						<h2 class="last-price"></h2>
-						<h3 class="offer"></h3>
-					</div>
-				</article>
-				<article class="deal">
-					<div id="deal-7"></div>
-					<h2></h2>
-					<div class="prices">
-						<h2 class="last-price"></h2>
-						<h3 class="offer"></h3>
-					</div>
-				</article>
-				<article class="">
-					<div id="deal-8"></div>
-					<h2></h2>
-					<div class="prices">
-						<h2 class="last-price"></h2>
-						<h3 class="offer"></h3>
-					</div>
-				</article>
-			</section>
-			<section id="latest-news" class="flex-display">
+			<section id="latest-head" class="latest-news flex-display">
 				<h2 class="latest-head">Latest deals ▸</h2>
 				<article class="latest-article">
 					<div id="offer-img1" class="offer-size"></div>
 					<h2>do eiusmod tempor incididunt</h2>
 					<div class="deal">
-						<strike class = "strike">$909.97</strike>
+						<span class = "strike">$909.97</span>
 						<span class="offer">$29.99</span>
 					</div>
 				</article>
@@ -439,7 +371,7 @@
 					<div id="offer-img2" class="offer-size"></div>
 					<h2>quis nostrud exercitation ullamco</h2>
 					<div class="deal">
-						<strike class = "strike">$909.97</strike>
+						<span class = "strike">$909.97</span>
 						<span class="offer">$29.99</span>
 					</div>
 				</article>
@@ -447,7 +379,7 @@
 					<div id="offer-img3" class="offer-size"></div>
 					<h2>do eiusmod tempor incididunt</h2>
 					<div class="deal">
-						<strike class = "strike">$909.97</strike>
+						<span class = "strike">$909.97</span>
 						<span class="offer">$29.99</span>
 					</div>
 				</article>
@@ -455,7 +387,7 @@
 					<div id="offer-img4" class="offer-size"></div>
 					<h2>quis nostrud exercitation ullamco</h2>
 					<div class="deal">
-						<strike class = "strike">$909.97</strike>
+						<span class = "strike">$909.97</span>
 						<span class="offer">$29.99</span>
 					</div>
 				</article>
@@ -463,7 +395,7 @@
 					<div id="offer-img5" class="offer-size"></div>
 					<h2>do eiusmod tempor incididunt</h2>
 					<div class="deal">
-						<strike class = "strike">$909.97</strike>
+						<span class = "strike">$909.97</span>
 						<span class="offer">$29.99</span>
 					</div>
 				</article>
@@ -471,7 +403,7 @@
 					<div id="offer-img6" class="offer-size"></div>
 					<h2>quis nostrud exercitation ullamco</h2>
 					<div class="deal">
-						<strike class = "strike">$909.97</strike>
+						<span class = "strike">$909.97</span>
 						<span class="offer">$29.99</span>
 					</div>
 				</article>
@@ -479,7 +411,7 @@
 					<div id="offer-img7" class="offer-size"></div>
 					<h2>do eiusmod tempor incididunt</h2>
 					<div class="deal">
-						<strike class = "strike">$909.97</strike>
+						<span class = "strike">$909.97</span>
 						<span class="offer">$29.99</span>
 					</div>
 				</article>
@@ -487,12 +419,12 @@
 					<div id="offer-img8" class="offer-size"></div>
 					<h2>quis nostrud exercitation ullamco</h2>
 					<div class="deal">
-						<strike class = "strike">$909.97</strike>
+						<span class = "strike">$909.97</span>
 						<span class="offer">$29.99</span>
 					</div>
 				</article>
 				<article class="latest-article hidden">
-					<div id="offer-img8"></div>
+					<div id="offer-img9"></div>
 					<h2>quis nostrud exercitation ullamco laboris nisi</h2>
 					<h3>Sit nostrud occaecat - 12 hrs ago</h3>
 				</article>
